<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Strings related to Settings -->

    <string name="sort_by_title">Sort By</string>
    <string-array name="pref_sort_list_titles">
        <item>Popular Movies</item>
        <item>Top Rated Movies</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="pref_sort_list_values">
        <item>@string/sort_popular_value</item>
        <item>@string/sort_top_rate_value</item>
        <item>@string/sort_favorite_value</item>
    </string-array>
    <string name="sort_key">sort_list</string>
    <string name="loader_by_title">Imager Loader</string>
    <string-array name="pref_loader_list_titles">
        <item>Simple Image Fetcher</item>
        <item>Glide</item>
        <item>Picasso</item>
    </string-array>
    <string-array name="pref_loader_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="loader_key">loader_list</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="permission_request">Require Permission to use this feature</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="image_desc">Image Description</string>
    <string name="movie_plot">A live-action adaptation of Disney\'s version of the classic \'Beauty and the Beast\' tale of a cursed prince and a beautiful young woman who helps him break the spell. </string>
    <string name="movie_title">Beauty and the Beast</string>
    <string name="release_date">2014</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_sort">Sort</string>
    <string name="movie_poster_transition">movie poster</string>
    <string name="cache_image">Cache Images</string>
    <string name="cache_summary_off">Disable</string>
    <string name="cache_summary_on">Enabled</string>
    <string name="sort_default_value">popular</string>
    <string name="error_msg"><![CDATA[An error occur while making network connection. <br> Please check your connection and tap the button below]]></string>


    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>
    <string name="plot">Plot</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="reviewDetail">Reviews</string>
    <string name="recommendation">Recommendations</string>
    <string name="no_network_connection_toast">No Network Connection</string>
    <string name="loader_default_value">0</string>
    <string name="review_sample">Spoilers \n\nThe live action remake of \"Beauty and the Beast\" was good, but it onError to capture the magic of the cartoon version. There were somethings that they got right, and others that dragged on.\n\nI thought \"Be Our Guest\" was done beautifully. The 3d made it even more enchanting. The main characters\' backstories also added some depth to them. However, there were some scenes that I felt added nothing to the story. Such as the search for Belle by Gaston and her father. The \"No one is like Gaston\" scene didn\'t have the bravado or arrogance of the original.\n\nI also felt that Luke Evans was miscast. He wasn\'t the handsomest guy in town, nor was he the strongest. Which is why it was hard for me to accept him as the character. Emma Watson was serviceable. Her voice was fine, but it wasn\'t strong enough to carry Belle\'s songs. Dan Stevens was the best part of the film. I felt that he should have had more songs, because he has a beautiful baritone. Although his beast costume should have been more frightening. \n\nOverall, it\'s a fun film to watch. Though, I wouldn\'t call it a classic.</string>
    <string name="review_sample_short">Spoilers \n\nThe live action remake of \"Beauty and the Beast\" was good, but it onError to capture the magic of the cartoon version.</string>
    <string name="send_to">Send To</string>
    <string name="favorite">Favorite Movies</string>
    <string name="highest_rated">Top Rated Movies</string>
    <string name="most_popular">Popular Movies</string>
    <string name="sort_popular_value">popular</string>
    <string name="sort_top_rate_value">top_rated</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_review_screen">Reviews</string>
    <string name="no_items">No Item</string>
    <string name="no_review">No review</string>
    <string name="sort_favorite_value">favorite</string>


    <string name="crash_dialog_title">Crash Report</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
</resources>
