<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rmhub.popularmovies.ui.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main_inference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/divider"
            app:layout_constraintBottom_toTopOf="@+id/movie_poster"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/rating_txt" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/rv_review" />

        <View
            android:id="@+id/overview_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/overview_bg"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="@+id/divider1"
            app:layout_constraintVertical_bias="0.0"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageView
            android:id="@+id/backdrop_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/dummy"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            app:srcCompat="@drawable/sample_backdrop"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageView
            android:id="@+id/backdrop_photo_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/dummy"
            android:scaleType="centerCrop"
            android:src="@drawable/overlay"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/backdrop_photo_overlay"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_photo_overlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_youtube" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/divider1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="@+id/divider"
            app:layout_constraintVertical_bias="0.0"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="100dp"
            android:layout_height="146dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/dummy"
            android:padding="5dp"
            android:src="@drawable/sample_poster_w182"
            app:layout_constraintBottom_creator="0"
            app:layout_constraintBottom_toBottomOf="@+id/movie_plot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003"
            app:layout_editor_absoluteX="359dp"
            app:layout_editor_absoluteY="104dp" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_heading2"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/divider"
            tools:text="@string/movie_title" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toTopOf="@+id/movie_title"
            app:srcCompat="@drawable/ic_marked_favorite" />

        <TextView
            android:id="@+id/movie_release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_heading3"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:text="@string/release_date" />


        <TextView
            android:id="@+id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Rating: "
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/movie_release_year"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_year" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/rating_txt"
            app:layout_constraintTop_toTopOf="@+id/rating_txt"
            tools:text="7.8/10" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="serif"
            android:padding="5dp"
            android:text="@string/plot"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_heading1"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <!--    <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/divider"
                app:layout_constraintLeft_toLeftOf="@+id/overview"
                app:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_creator="1"
                app:layout_constraintTop_toBottomOf="@+id/overview" />
-->
        <TextView
            android:id="@+id/movie_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/overview"
            android:layout_marginTop="10sp"
            android:fontFamily="serif"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size"
            app:layout_constraintLeft_toLeftOf="@+id/overview"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="93dp"
            tools:text="@string/movie_plot" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:padding="5dp"
            android:text="@string/review"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_heading1"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toBottomOf="@+id/movie_plot" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toBottomOf="@+id/review" />


        <TextView
            android:id="@+id/recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:padding="5dp"
            android:text="@string/recommendation"
            android:textSize="@dimen/text_heading1"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toTopOf="@+id/divider2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recommendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_inference"
            app:layout_constraintRight_toRightOf="@+id/activity_main_inference"
            app:layout_constraintTop_toBottomOf="@+id/recommendation" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>